--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/three": "^0.141.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "postcss-preset-env": "^7.7.2",
+    "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
 }
