--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.14.3",
     "@react-three/fiber": "^8.0.27",
     "@react-three/xr": "^3.5.0",
+    "eslint-config-next": "^12.1.7-canary.35",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,7 +24,7 @@
     "@types/react-dom": "18.0.5",
     "@types/three": "^0.141.0",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-plugin-react": "^7.30.1",
     "postcss-preset-env": "^7.7.2",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
