--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/three": "^0.141.0",
     "eslint": "8.18.0",
     "eslint-plugin-react": "^7.30.1",
+    "eslint-config-next": "12.2.0",
     "postcss-preset-env": "^7.7.2",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
