--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@egjs/view3d": "^2.5.0",
     "@google/model-viewer": "^1.12.0",
     "@react-three/drei": "^9.14.3",
     "@react-three/fiber": "^8.0.27",
@@ -25,8 +26,8 @@
     "@types/react-dom": "18.0.5",
     "@types/three": "^0.141.0",
     "eslint": "8.18.0",
-    "eslint-plugin-react": "^7.30.1",
     "eslint-config-next": "12.2.0",
+    "eslint-plugin-react": "^7.30.1",
     "postcss-preset-env": "^7.7.2",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
