--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.14.3",
     "@react-three/fiber": "^8.0.27",
     "@react-three/xr": "^3.5.0",
+    "@supabase/supabase-js": "^1.35.4",
     "eslint-config-next": "^12.1.7-canary.35",
     "next": "12.1.6",
     "react": "18.2.0",
