--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-hook-form": "^7.33.1",
     "three": "^0.141.0"
   },
   "devDependencies": {
