--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^1.35.4",
     "eslint-config-next": "^12.1.7-canary.35",
     "next": "12.1.6",
+    "next-s3-upload": "^0.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
